<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.CambioPasswordActivity">


    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="173dp"
        android:layout_height="139dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="119dp"
        android:layout_marginTop="51dp"
        android:layout_marginEnd="118dp"
        app:srcCompat="@drawable/com_facebook_button_icon_blue" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView2"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="31dp"
        android:layout_marginTop="26dp"
        android:layout_marginEnd="30dp"
        android:textSize="18dp"
        android:gravity="center"
        android:text="@string/texto_cambiar_pass" />

    <EditText
        android:id="@+id/cambio_pass_editText"
        android:layout_width="259dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="76dp"
        android:layout_marginTop="31dp"
        android:layout_marginEnd="76dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textPersonName" />

    <Button
        android:id="@+id/btn_cambio_pass"
        android:layout_width="wrap_content"
        android:layout_height="59dp"
        android:layout_below="@+id/cambio_pass_editText"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="70dp"
        android:layout_marginTop="39dp"
        android:layout_marginEnd="70dp"
        android:text="@string/cambiar_pass" />
</RelativeLayout>