<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Actividades.LoginActivity">

    <TextView
        android:id="@+id/accedecuentatext"
        android:layout_width="wrap_content"
        android:layout_height="30dp"
        android:layout_above="@+id/loginemail"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="59dp"
        android:layout_marginEnd="18dp"
        android:layout_marginBottom="31dp"
        android:text="¡Accede a una cuenta para buscar historias!" />

    <EditText
        android:id="@+id/loginemail"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/loginpass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="41dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <EditText
        android:id="@+id/loginpass"
        android:layout_width="270dp"
        android:layout_height="wrap_content"
        android:layout_above="@+id/olvidarpass"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="88dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="44dp"
        android:ems="10"
        android:hint="@string/pass"
        android:inputType="textPassword" />

    <TextView
        android:id="@+id/olvidarpass"
        android:layout_width="202dp"
        android:layout_height="29dp"
        android:layout_above="@+id/botonlogin"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="196dp"
        android:layout_marginEnd="12dp"
        android:layout_marginBottom="33dp"
        android:textColor="@color/colorlink"
        android:text="¿Has olvidado la contraseña?" />

    <Button
        android:id="@+id/botonlogin"
        android:layout_width="112dp"
        android:layout_height="60dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="158dp"
        android:layout_marginEnd="141dp"
        android:layout_marginBottom="57dp"
        android:text="@string/acceso" />

    <ImageView
        android:id="@+id/imageView1"
        android:layout_width="173dp"
        android:layout_height="139dp"
        android:layout_above="@+id/accedecuentatext"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="107dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/com_facebook_button_icon_blue" />

</RelativeLayout>